src/objects/Device__c.object
<CustomObject>
    <description>Custom object for MotoDev</description>
    <fields>
        <fullName>APC_code__c</fullName>
        <description>Mapped from the NPI field &quot;APC&quot;</description>
        <externalId>true</externalId>
        <inlineHelpText>Mapped from the NPI field &quot;APC&quot;</inlineHelpText>
        <label>APC_code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APP_Version__c</fullName>
        <description>APPS version, from NPI</description>
        <inlineHelpText>APPS version, from NPI</inlineHelpText>
        <label>APPS Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activities_for_Next_Week__c</fullName>
        <label>Activities for Next Week</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Shipped_Volume__c</fullName>
        <label>Actual Shipped Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjunct_Chipset__c</fullName>
        <description>From NPI field, &quot;Adjunct_chipset&quot;</description>
        <inlineHelpText>From NPI field, &quot;Adjunct_chipset&quot;</inlineHelpText>
        <label>Application Chipset</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alpha_Date__c</fullName>
        <description>Device team integration alpha date</description>
        <inlineHelpText>Device team integration alpha date</inlineHelpText>
        <label>Alpha Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Android_Release__c</fullName>
        <description>Mapped from NPI &quot;SW Platform&quot; field</description>
        <inlineHelpText>Mapped from NPI &quot;SW Platform&quot; field</inlineHelpText>
        <label>Platform Release</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applications_Copied_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The device from which the &apos;copy to&apos; was performed.</description>
        <label>Applications Copied From:</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Devices (Applications Copied From:)</relationshipLabel>
        <relationshipName>Devices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applications_Copied__c</fullName>
        <description>date &amp; time the applications were copied from another device using the &apos;copy to&apos; button.</description>
        <label>Applications Copied:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Document_from_Google__c</fullName>
        <inlineHelpText>This is a link to the document, located on another server</inlineHelpText>
        <label>Approval Document from Google</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <description>Field to determine if the Google TA approval was manual or auto approved</description>
        <inlineHelpText>Field to determine if the Google TA approval was manual or auto approved</inlineHelpText>
        <label>Approval Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apps_Requiring_3rd_Party_Approval__c</fullName>
        <label>Apps Requiring 3rd Party Approval</label>
        <summaryFilterItems>
            <field>DeviceApplicationAssoc__c.X3rd_Party_Approval_Required__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DeviceApplicationAssoc__c.Include_in_BOM__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>DeviceApplicationAssoc__c.Device__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Audio_Encode_Codecs__c</fullName>
        <description>From NPI field &quot;Audio Encode Codecs&quot;</description>
        <inlineHelpText>From NPI field &quot;Audio Encode Codecs&quot;</inlineHelpText>
        <label>Audio Encode Codecs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audio_Playback_Codecs__c</fullName>
        <description>From GPPD/NPI field &quot;Audio Playback Codecs&quot;</description>
        <inlineHelpText>From GPPD/NPI field &quot;Audio Playback Codecs&quot;</inlineHelpText>
        <label>Audio Playback Codecs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLUR_Version_String__c</fullName>
        <description>BLUR Version String encoded into the device</description>
        <label>BLUR_Version_String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLUR_Version__c</fullName>
        <description>Mapped from NPI &quot;BLUR Version&quot; field</description>
        <inlineHelpText>Mapped from NPI &quot;BLUR Version&quot; field</inlineHelpText>
        <label>BLUR Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banding_or_Variant__c</fullName>
        <description>From NPI field &quot;Banding or Variant&quot;</description>
        <inlineHelpText>From NPI field &quot;Banding or Variant&quot;</inlineHelpText>
        <label>Banding or Variant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baseband_Chipset__c</fullName>
        <description>From NPI field, &quot;Baseband Chipset&quot;</description>
        <inlineHelpText>From NPI field, &quot;Baseband Chipset&quot;</inlineHelpText>
        <label>Baseband Chipset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beta_Date__c</fullName>
        <description>Device team integration beta date</description>
        <inlineHelpText>Device team integration beta date</inlineHelpText>
        <label>Beta Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Browser_Type__c</fullName>
        <description>From GPPD/NPI field &quot;Browser Type&quot;</description>
        <inlineHelpText>From GPPD/NPI field &quot;Browser Type&quot;</inlineHelpText>
        <label>Browser Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Number__c</fullName>
        <description>From NPI field &quot;Build_Number&quot;</description>
        <inlineHelpText>From NPI field &quot;Build_Number&quot;</inlineHelpText>
        <label>Build Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Operations_Analyst_Email__c</fullName>
        <label>Business Operations Analyst Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Operations_Analyst__c</fullName>
        <label>Business Operations Analyst</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Mapped from NPI field &quot;Business Unit&quot;</description>
        <inlineHelpText>Mapped from NPI field &quot;Business Unit&quot;</inlineHelpText>
        <label>Business Unit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTS_Comments__c</fullName>
        <label>CTS Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTS_Coordinator_Email__c</fullName>
        <label>MOT/Google Tech Account Analyst Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CTS_Coordinator_Name__c</fullName>
        <label>MOT/Google Technical Account Analyst</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTS_Last_SW_Submitted__c</fullName>
        <label>CTS Last SW Submitted</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTS_Software_Checklist__c</fullName>
        <inlineHelpText>This is a link to the document, located on another server</inlineHelpText>
        <label>CTS Software Checklist</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CTS_Submission_Status__c</fullName>
        <label>CTS Submission Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Checklist Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CTS_Technical_Lead_Email__c</fullName>
        <label>CTS Technical Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CTS_Technical_Lead_Name__c</fullName>
        <label>CTS Technical Lead</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Camera_resolution__c</fullName>
        <description>Mapped from NPI &quot;Main Camera Resolution MP&quot; field</description>
        <inlineHelpText>Mapped from NPI &quot;Main Camera Resolution MP&quot; field</inlineHelpText>
        <label>Camera resolution   (main)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Camera_resolution_secondary__c</fullName>
        <description>Mapped from NPI &quot;P2P Camera Resolution MP&quot; field</description>
        <inlineHelpText>Mapped from NPI &quot;P2P Camera Resolution MP&quot; field</inlineHelpText>
        <label>Camera resolution (secondary)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Device (Sales Model) is Cancelled or Deleted, based on NPI</description>
        <inlineHelpText>Device (Sales Model) is Cancelled or Deleted, based on NPI</inlineHelpText>
        <label>Device Cancelled or Deleted from NPI?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelled_product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product Family cancelled, based on NPI</description>
        <inlineHelpText>Product Family cancelled, based on NPI</inlineHelpText>
        <label>Product Family Cancelled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carrier_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Carrier Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <description>Integrates via Informatic to NPI field SA_Customer</description>
        <label>Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComplianceEmail_AifLevel1_SentForSADate__c</fullName>
        <description>This is the SA Date that the Level 1 AIF Compliance email was using when it was sent.</description>
        <inlineHelpText>This is the SA Date that the Level 1 AIF Compliance email was using when it was sent.</inlineHelpText>
        <label>ComplianceEmail(AifLevel1)SentForSADat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ComplianceEmail_AifLevel2_SentForSADate__c</fullName>
        <description>This is the SA Date that the Level 2 AIF Compliance email was using when it was sent.</description>
        <inlineHelpText>This is the SA Date that the Level 2 AIF Compliance email was using when it was sent.</inlineHelpText>
        <label>ComplianceEmail(AifLevel2)SentForSADate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ComplianceEmail_BomLevel1_SentForSADate__c</fullName>
        <description>This is the SA Date that the Level 1 BOM Compliance email was using when it was sent.</description>
        <inlineHelpText>This is the SA Date that the Level 1 BOM Compliance email was using when it was sent.</inlineHelpText>
        <label>ComplianceEmail(BomLevel1)SentForSADate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ComplianceEmail_BomLevel2_SentForSADate__c</fullName>
        <description>This is the SA Date that the Level 2 BOM Compliance email was using when it was sent.</description>
        <inlineHelpText>This is the SA Date that the Level 2 BOM Compliance email was using when it was sent.</inlineHelpText>
        <label>ComplianceEmail(BomLevel2)SentForSADate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ComplianceEmail_ContLevel1_SentForSADate__c</fullName>
        <description>This is the SA Date that the Level 1 Contract Compliance email was using when it was sent.</description>
        <inlineHelpText>This is the SA Date that the Level 1 Contract Compliance email was using when it was sent.</inlineHelpText>
        <label>ComplianceEmail(ContLevel1)SentForSADate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ComplianceEmail_ContLevel2_SentForSADate__c</fullName>
        <description>This is the SA Date that the Level 2 Contract Compliance email was using when it was sent.</description>
        <inlineHelpText>This is the SA Date that the Level 2 Contract Compliance email was using when it was sent.</inlineHelpText>
        <label>ComplianceEmail(ContLevel2)SentForSADate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ComplianceEmail_ContLevel3_SentForSADate__c</fullName>
        <label>ComplianceEmail(ContLevel3)SentForSADate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Connectivity_Features__c</fullName>
        <description>From NPI field &quot;Connectivity Features&quot;</description>
        <inlineHelpText>From NPI field &quot;Connectivity Features&quot;</inlineHelpText>
        <label>Connectivity Features</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Device_Package_Name__c</fullName>
        <formula>Core_Device_Package__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Core Device Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Device_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Core Device Package selected for this Device. To change use the Edit Core &amp; Stable button.</inlineHelpText>
        <label>Core Device Package</label>
        <referenceTo>Core_Device_Package__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Country Code, from NPI</description>
        <inlineHelpText>Country Code, from NPI</inlineHelpText>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Integrates via Informatic to NPI field SA_Country</description>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_Segment_Code__c</fullName>
        <description>From NPI field &quot;DP Segment Code&quot;</description>
        <inlineHelpText>From NPI field &quot;DP Segment Code&quot;</inlineHelpText>
        <label>DP Segment Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTV__c</fullName>
        <formula>IF(INCLUDES(Product_PMD__r.Mobile_TV_Formats__c,&apos;N/A&apos;),&apos;False&apos;, IF(ISBLANK(Product_PMD__r.Mobile_TV_Formats__c),&apos;False&apos;, &apos;True&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DTV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_CTS_SW_Checklist_Provided__c</fullName>
        <label>Date CTS SW Checklist Provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_CTS_SW_Checklist_Sent_to_Google__c</fullName>
        <label>Date CTS SW Checklist Sent to Google</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_GMS_Conditional_Approval_by_Google__c</fullName>
        <label>Date GMS Conditional Approval by Google</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_GMS_SW_Checklist_Provided__c</fullName>
        <label>Date GTA SW Checklist Provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_GMS_SW_Checklist_Sent_to_Google__c</fullName>
        <label>Date GMS SW Checklist Sent to Google</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_LE_CTS_SW_Checklist_Provided__c</fullName>
        <label>LE Date CTS SW Checklist Provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_LE_CTS_SW_Checklist_Sent_to_Google__c</fullName>
        <label>LE Date CTS SW Checklist Sent to Google</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_LE_GMS_Conditional_Approval_by_Ggle__c</fullName>
        <label>LE Date GMS Conditional Approval by Ggle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_LE_GMS_SW_Checklist_Provided__c</fullName>
        <label>LE Date GMS SW Checklist Provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_LE_GMS_SW_Checklist_Sent_to_Google__c</fullName>
        <label>LE Date GMS SW Checklist Sent to Google</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Launch_Addendum_Executed_by_Google__c</fullName>
        <label>Date Launch Addendum Executed by Google</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Launch_Addendum_Executed_by_MOT__c</fullName>
        <description>Date when Motorola exectutes the Launch Addendum</description>
        <inlineHelpText>Date Launch Addendum Executed by Motorola</inlineHelpText>
        <label>Date Launch Addendum Executed by MOT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Launch_Addendum_Submitted_to_Google__c</fullName>
        <label>Date Launch Addendum Submitted to Google</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Launch_Addendum_Template_Provided__c</fullName>
        <label>Date Launch Addendum Template Provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Google_TA_Approval_by_Google__c</fullName>
        <label>Date of Google TA Approval by Google</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Mapped from NPI &quot;Key Features&quot; field</description>
        <inlineHelpText>Mapped from NPI &quot;Key Features&quot; field</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Destination_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_External_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Device External Unique ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Fully_Approved__c</fullName>
        <description>This device is locked down.  Anything that changes after this is unexpected and will cause a change to the BOM.</description>
        <inlineHelpText>This device is locked down.  Anything that changes after this is unexpected and will cause a change to the BOM.</inlineHelpText>
        <label>Device Fully Approved</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Device_ID__c</fullName>
        <description>Unique ID field for each Device in SalesForce, based on matching record in NPI</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID field for each Device in SalesForce, based on matching record in NPI</inlineHelpText>
        <label>Device ID</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Device_Link_to_NPI__c</fullName>
        <formula>IF(NOT ISBLANK(GPPD_ID__c), HYPERLINK(&quot;http://npidashboard.mot.com/cgi/sa_status.pl?ProductID=&quot; &amp; NPI_Family_ID__c &amp; &quot;&amp;GPPDID=&quot; &amp; GPPD_ID__c &amp; &quot;&amp;SAID=&quot; &amp; Device_ID__c &amp; &quot;&amp;_tab=sa_status&amp;_VIEW=launchView&amp;loginto=267_390&quot;,Device_ID__c), HYPERLINK(&quot;http://npidashboard.mot.com/cgi/sa_status.pl?ProductID=&quot; &amp; NPI_Family_ID__c &amp; &quot;&amp;SAID=&quot; &amp; Device_ID__c &amp; &quot;&amp;_tab=sa_status&amp;_VIEW=launchView&amp;loginto=1368_390&quot;,Device_ID__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Link to NPI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Name_plus_ID__c</fullName>
        <description>Concatenation of Device Name plus Device ID</description>
        <formula>(Name) &amp; &quot; (&quot; &amp; (Device_ID__c) &amp; &quot;)&quot;</formula>
        <inlineHelpText>Concatenation of Device Name plus Device ID</inlineHelpText>
        <label>Device Name plus ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Previous_Name_if_any__c</fullName>
        <description>Name of previous device name (if any), changed in GPPD/NPI</description>
        <externalId>true</externalId>
        <inlineHelpText>Name of previous device name (if any), changed in GPPD/NPI</inlineHelpText>
        <label>Device Previous Name    (if any)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Project_Program_Lead_Email__c</fullName>
        <description>Automatically populated from NPI</description>
        <label>Device Project/Program Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Device_Project_Program_Lead__c</fullName>
        <description>From NPI</description>
        <inlineHelpText>From NPI</inlineHelpText>
        <label>Device Project/Program Lead</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Risk_Flag_Condition__c</fullName>
        <formula>IF(text(Device_Risk_Flag__c) = &quot;Red&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlHw&quot;, &quot;Red&quot;),
IF(text(Device_Risk_Flag__c) = &quot;Yellow&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlI1&quot;, &quot;Yellow&quot;),
IF(text(Device_Risk_Flag__c) = &quot;Green&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlI6&quot;, &quot;Green&quot;),
&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Risk Flag Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Risk_Flag__c</fullName>
        <label>Device Risk Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Device_SW_KIT_State__c</fullName>
        <label>SFDC Device SW KIT State</label>
        <picklist>
            <picklistValues>
                <fullName>12 - Prelim</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>32 - Controlled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 - Full Release</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <description>From NPI field &quot;Device Type&quot;</description>
        <inlineHelpText>From NPI field &quot;Device Type&quot;</inlineHelpText>
        <label>Device Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Pixels__c</fullName>
        <description>Mapped from NPI &quot;Display Pixels&quot; field</description>
        <inlineHelpText>Mapped from NPI &quot;Display Pixels&quot; field</inlineHelpText>
        <label>Display Pixels</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Size__c</fullName>
        <description>Mapped from NPI &quot;Display Size&quot; field</description>
        <inlineHelpText>Mapped from NPI &quot;Display Size&quot; field</inlineHelpText>
        <label>Display Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Type__c</fullName>
        <description>Mapped from NPI &quot;Display Type&quot; field</description>
        <inlineHelpText>Mapped from NPI &quot;Display Type&quot; field</inlineHelpText>
        <label>Display Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dual_SIM__c</fullName>
        <formula>IF(INCLUDES(Product_PMD__r.SIM_Configuration__c, &apos;Dual SIM&apos;), &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dual SIM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOL__c</fullName>
        <label>EOL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>From NPI field &quot;Email&quot;</description>
        <inlineHelpText>From NPI field &quot;Email&quot;</inlineHelpText>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Current_Royalty_Cost__c</fullName>
        <description>Estimated Current Royalty Cost</description>
        <label>Estimated Current Royalty Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_High_Royalty_Cost__c</fullName>
        <label>Estimated High Royalty Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_High_Royalty_Cost_w_o_Qualcomm__c</fullName>
        <label>Estimated High Royalty Cost w/o Qualcomm</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Low_Royalty_Cost__c</fullName>
        <label>Estimated Low Royalty Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Experience_Category__c</fullName>
        <description>Mapped from NPI field &quot;Experience Category&quot;</description>
        <inlineHelpText>Mapped from NPI field &quot;Experience Category&quot;</inlineHelpText>
        <label>Experience Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Name__c</fullName>
        <description>Mapped from NPI &quot;External Name&quot; field</description>
        <externalId>true</externalId>
        <inlineHelpText>Mapped from NPI &quot;External Name&quot; field</inlineHelpText>
        <label>External Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FT1__c</fullName>
        <description>Carrier/region Field Test 1 integration date</description>
        <inlineHelpText>Carrier/region Field Test 1 integration date</inlineHelpText>
        <label>FT1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FT2__c</fullName>
        <description>Carrier/region Field Test 2 integration date</description>
        <inlineHelpText>Carrier/region Field Test 2 integration date</inlineHelpText>
        <label>FT2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FTV__c</fullName>
        <description>Carrier/region Field Test Final integration date</description>
        <inlineHelpText>Carrier/region Field Test Final integration date</inlineHelpText>
        <label>FTV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Approvals_Comments__c</fullName>
        <description>Capture any data pertaining to Final device approvals</description>
        <inlineHelpText>Capture any data pertaining to Final device approvals</inlineHelpText>
        <label>Final Approvals Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Form_Factor__c</fullName>
        <description>Mapped from NPI &quot;Form Factor&quot; field</description>
        <inlineHelpText>Mapped from NPI &quot;Form Factor&quot; field</inlineHelpText>
        <label>Form Factor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMS_Comments__c</fullName>
        <label>GMS Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GMS_Last_SW_Submitted__c</fullName>
        <label>Build Fingerprint Being Submitted</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMS_Software_Checklist__c</fullName>
        <inlineHelpText>Link to the SW Build Folder</inlineHelpText>
        <label>GTA Software Folder Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GMS_Submission_Status__c</fullName>
        <description>The status of this device&apos;s GMS submission in the Google Technical Acceptance process</description>
        <inlineHelpText>The status of this device&apos;s GTA submission in the Google Technical Acceptance process</inlineHelpText>
        <label>GTA Submission Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Checklist Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GMS_Technical_Lead_Email__c</fullName>
        <label>GMS Technical Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GMS_Technical_Lead_Name__c</fullName>
        <label>GMS Technical Lead</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Release_Candidate__c</fullName>
        <description>GM minus two weeks</description>
        <formula>GM__c -14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>GM date minus two weeks</inlineHelpText>
        <label>GM Release Candidate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GM__c</fullName>
        <description>Device team integration GM date</description>
        <inlineHelpText>Device team integration GM date</inlineHelpText>
        <label>GM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GPPD_ID__c</fullName>
        <description>Global Product Portfolio Database product entry ID</description>
        <externalId>true</externalId>
        <inlineHelpText>From GPPD</inlineHelpText>
        <label>GPPD Product Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTA_Submitter_Email__c</fullName>
        <description>Email to capture the email of the person submitting the device for Google TA</description>
        <inlineHelpText>Enter the email address you would like to have the approval email sent to</inlineHelpText>
        <label>GTA Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Google_Relationship_Manager_Email__c</fullName>
        <label>Google Relationship Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Google_Relationship_Manager_Name__c</fullName>
        <label>Google Relationship Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>